# Lua_5.1.5-Android

./: .gitignore  CMakeLists.txt  LICENSE  build.gradle
lua-5.1.5/src/: lbaselib.c  linit.c  llex.c  luaconf.h
luajava-1.1/src/c/: luajava.c
luajava-1.1/src/java/org/keplerproject/luajava/: LuaState.java
src/main/: AndroidManifest.xml
src/main/res/values/: strings.xml
